<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/roadmap"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/roadmap"
            android:checked="true"/>
        <item
            android:id="@+id/satellite"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/satellite"/>
        <item
            android:id="@+id/hybrid"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/hybrid"/>
        <item
            android:id="@+id/terrain"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/terrain"/>
    </group>

</menu>